--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
+  /*Jessica Joseline Galicia Sanchez-23415082600014*/
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Reproductor de Audio en la Web</title>
@@ -24,4 +25,5 @@
     <p>© 2025 Práctica desarrollada en Sublime Text</p>
   </footer>
 </body>
+
 </html>
